// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditPublicationDate > calls onUpdate when submitted > EditPublicationDate - with onUpdate 1`] = `
<div>
  <div
    class="cursor-pointer"
  >
    <div
      class="flex flex-col gap-2"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated capitalize css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
      >
        publicationDate.label
      </label>
      <div
        class="group flex items-center gap-1"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
        >
          2024-01-15
        </p>
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium ml-auto opacity-0 group-hover:opacity-100 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="EditIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditPublicationDate > renders snapshot > EditPublicationDate 1`] = `
<div>
  <div
    class="cursor-pointer"
  >
    <div
      class="flex flex-col gap-2"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated capitalize css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
      >
        publicationDate.label
      </label>
      <div
        class="group flex items-center gap-1"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
        />
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium ml-auto opacity-0 group-hover:opacity-100 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="EditIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditPublicationDate > renders with default value > EditPublicationDate - with value 1`] = `
<div>
  <div
    class="cursor-pointer"
  >
    <div
      class="flex flex-col gap-2"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated capitalize css-1xlwe7e-MuiFormLabel-root-MuiInputLabel-root"
      >
        publicationDate.label
      </label>
      <div
        class="group flex items-center gap-1"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-pucm0b-MuiTypography-root"
        >
          2024-01-15
        </p>
        <button
          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium ml-auto opacity-0 group-hover:opacity-100 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
            data-testid="EditIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
